# SoftMag_ros

./: .gitignore  env_loader.sh  requirements_backup.txt  start_all (copy).sh  start_all.sh  start_config.json  start_env_loader.sh  start_local.sh
src/Arduino/Regulator/: Regulator (copy).ino  Regulator.ino  automatic_regulator.ino
src/Arduino/Regulator/automatic_regulator/: automatic_regulator (another copy).txt  automatic_regulator (copy).txt  automatic_regulator.ino
src/Arduino/Regulator/testing_regulator/: testing_regulator (copy).txt  testing_regulator.ino
src/adaptive_grasp_controller/: CMakeLists.txt  adaptive_grasp_controller_node.py  package.xml
src/data_acquisition/: CMakeLists.txt  package.xml
src/data_acquisition/src/: data_acquisition_node.py
src/data_processing/: CMakeLists.txt  package.xml
src/data_processing/Savings/: lstm_classification_model.h5
src/data_processing/launch/: start_diagnostics.launch
src/data_processing/src/: data_processing_node(copy).py  data_processing_node(zero_under_contact_free_condiction).py  data_processing_node.py
src/data_recording/: CMakeLists.txt  package.xml
src/data_recording/src/: data_recording_node.py  data_visualization.py
src/launch_project/: CMakeLists.txt  package.xml
src/launch_project/launch/: adaptive_grasp_controller.launch  data_processing_launch.launch  project_launch (child).launch  project_launch.launch  sensors_data_processing_launch.launch  sofa_simulation_launch.launch  testing_launch.launch
src/launch_tcp/: CMakeLists.txt  package.xml
src/launch_tcp/launch/: project_launch.launch
src/ml_prediction/: CMakeLists.txt  package.xml
src/ml_prediction/src/: ml_prediction_node.py  test.py
src/ml_prediction/src/Models/: actuation_sensor_model_S1.pkl  actuation_sensor_model_S2.pkl  lstm_classification_model_gripper.h5  lstm_classification_model_sensor.h5  normalforce_model_gripper.h5  normalforce_model_sensor.h5  normalization_force_params_gripper.pkl  normalization_force_params_sensor.pkl  normalization_position_params_gripper.pkl  shearforce_model_gripper.h5  shearforce_model_sensor.h5
src/ml_prediction/src/Savings/: fitted_scaler.pkl  lstm_classification_model.tflite  normalization_params.pkl
src/pressure_processing/: CMakeLists.txt  package.xml
src/pressure_processing/src/: pressure_processing_node.py
src/qt_interface/: CMakeLists.txt  package.xml  run_qt_interface.sh
src/qt_interface/Scripts/: main_window (pyqtgraph).py  main_window.py  mode_manager.py  node_manager.py  rulerscale.py  ui_mainwindow.py
src/qt_interface/include/qt_interface/: mainwindow.h
src/qt_interface/resources/: mainwindow.ui
src/qt_interface/src/: mainwindow.cpp
src/qt_interface/ui/: mainwindow.ui  ui_mainwindow.py
src/qtsofatest/: CMakeLists.txt  package.xml
src/qtsofatest/src/: basic.py  main_window.py  sofaqtviewer.py  test.py  ui_mainwindow.py
src/qtsofatest/ui/: mainwindow.ui  ui_mainwindow.py
src/sensors_data_processing/: CMakeLists.txt  package.xml
src/sensors_data_processing/Savings/: mlp_classification_model.h5  mlp_xy_model.h5  mlp_xy_model.tflite  regression_model.h5
src/sensors_data_processing/config/: diagnostics_analyzers.yaml
src/sensors_data_processing/launch/: start_diagnostics.launch
src/sensors_data_processing/src/: sensors_data_processing_node(zero_under_contact_free_condiction).py  sensors_data_processing_node.py
src/signal_monitoring/: CMakeLists.txt  package.xml
src/signal_monitoring/src/: signal_monitoring_node.py
src/sofa_simulation/: CMakeLists.txt  package.xml  runSofa.ini
src/sofa_simulation/src/: controller.py  runSofa.ini  sofa_simulation_node.py  sofaros.py
src/sofa_simulation/src/backup/: controller.py  environment.py  publisher_node.py  sofa_simulation_node(copy).py  sofaros.py
src/sofa_simulation/src/backup/data/mesh/: block.SLDPRT  border13.msh  border13.stl  border8b.msh  chambers.stl  fabric2.msh  foam8.msh  foam8.stl  schambers.stl  tchambers.stl
src/sofa_simulation/src/data/mesh/: block.stl  border8.msh  border8.stl  border8b.stl  conic.msh  conic.stl  fabric2.stl  foam13.stl
(+6 files in other folders)
